@@ -26,28 +26,6 @@ FileSystem::FileSystem()
 	cylinder_size = 0 ;
 }
 	
-int FileSystem::Execute_Command( Glib::ustring command ) 
-{	
-	
-	//stderr to stdout
-	//command += " 2>&1" ;
-	std::cout << command << std::endl ;
-	cmd_output = command + "\n\n" ;
-	
-	char c_buf[ 512 ] ;
-	FILE *f = popen( command .c_str( ), "r" ) ;
-	
-	while ( fgets( c_buf, 512, f ) )
-	{
-		//output = Glib::locale_to_utf8( c_buf ) ;
-		//std::cout << output << std::endl ;
-	}
-	
-	cmd_output = "" ;
-	
-        return pclose( f ) ;
-}
-
 int FileSystem::execute_command( std::vector<std::string> argv, std::vector<OperationDetails> & operation_details ) 
 {
 	Glib::ustring temp ;
@@ -56,14 +34,10 @@ int FileSystem::execute_command( std::vector<std::string> argv, std::vector<Oper
 
 	operation_details .push_back( OperationDetails( temp, OperationDetails::NONE ) ) ;
 
-	envp .clear() ;
-	envp .push_back( "LC_ALL=C" ) ;
-	
 	try
 	{
 		Glib::spawn_sync( ".",
 				  argv,
-				  envp,
 				  Glib::SPAWN_SEARCH_PATH,
 				  sigc::slot< void >(),
 				  &output,
@@ -83,6 +57,30 @@ int FileSystem::execute_command( std::vector<std::string> argv, std::vector<Oper
 	
 	if ( ! error .empty() )
 		operation_details .back() .sub_details .push_back( OperationDetails( error, OperationDetails::NONE ) ) ;
+
+	return exit_status ;
+}
+
+int FileSystem::execute_command( std::vector<std::string> argv, std::string & output ) 
+{
+	std::vector<std::string> envp ;
+	envp .push_back( "LC_ALL=C" ) ;
+	
+	try
+	{
+		Glib::spawn_sync( ".", 
+				  argv,
+				  envp,
+				  Glib::SPAWN_SEARCH_PATH,
+				  sigc::slot<void>(),
+				  &output,
+				  &error, //dummy
+				  &exit_status) ;
+	}
+	catch ( Glib::Exception & e )
+	{ 
+		std::cout << e .what() << std::endl ;
+	}
 
 	return exit_status ;
 }
