@@ -56,30 +56,23 @@ void ext3::Set_Used_Sectors( Partition & partition )
 	argv .push_back( "-h" ) ;
 	argv .push_back( partition .partition ) ;
 
-	envp .push_back( "LC_ALL=C" ) ;
-	
-	try
+	if ( ! execute_command( argv, output ) )
 	{
-		Glib::spawn_sync( ".", argv, envp, Glib::SPAWN_SEARCH_PATH, sigc::slot< void >(), &output ) ;
-	}
-	catch ( Glib::Exception & e )
-	{ 
-		std::cout << e .what() << std::endl ;
-		return ;
-	} 
+		index = output .find( "Free blocks:" ) ;
+		if ( index >= output .length() ||
+		     sscanf( output.substr( index ) .c_str(), "Free blocks: %Ld", &N ) != 1 )   
+			N = -1 ;
+	
+		index = output .find( "Block size:" ) ;
+		if ( index >= output.length() || 
+		     sscanf( output.substr( index ) .c_str(), "Block size: %Ld", &S ) != 1 )  
+			S = -1 ;
 
-	index = output .find( "Free blocks:" ) ;
-	if ( index >= output .length() || sscanf( output.substr( index ) .c_str(), "Free blocks: %Ld", &N ) != 1 )   
-		N = -1 ;
-	
-	index = output .find( "Block size:" ) ;
-	if ( index >= output.length() || sscanf( output.substr( index ) .c_str(), "Block size: %Ld", &S ) != 1 )  
-		S = -1 ;
-	
-	if ( N > -1 && S > -1 )
-		partition .Set_Unused( N * S / 512 ) ;
+		if ( N > -1 && S > -1 )
+			partition .Set_Unused( Utils::Round( N * ( S / 512.0 ) ) ) ;
+	}
 }
-	
+
 bool ext3::Create( const Partition & new_partition, std::vector<OperationDetails> & operation_details )
 {
 	operation_details .push_back( OperationDetails( String::ucompose(
